test/sema/typeck/call/generic-static-call-unknown-method-with-unknown-arg.dora
trait Foo {}

fn f[T: Foo]() {
    T::unknown(unknown_var);
}
